# stylometry-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.ritalin/: evidence.jsonl  obligations.jsonl  scope.yaml
eval/: fetch_corpora.sh  lowo.sh  validate.sh
eval/data_control/profiles/: chesterton.json  jerome.json  wodehouse.json
eval/data_lowo/profiles/: chesterton.json  jerome.json  wodehouse.json
eval/data_sig/profiles/: chesterton.json  jerome.json  wodehouse.json
src/: cli.rs  config.rs  error.rs  main.rs  output.rs
src/commands/: agent_info.rs  calibrate.rs  compare.rs  config.rs  contract.rs  mod.rs  profile.rs  skill.rs  update.rs
src/engine/: calibrate.rs  delta.rs  features.rs  mod.rs  model.rs  profile.rs  store.rs  text.rs
tests/: agent_info_contract.rs  exit_code_contracts.rs  output_contracts.rs  robustness.rs  update_contract.rs  verification_contracts.rs
