[package]
# crates.io package name; the installed binary is `stylometry` (see [[bin]]).
name = "stylometry-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Authorship-verification stylometry CLI: build author profiles and verify authorship with calibrated Burrows/Cosine Delta. Local, agent-friendly, single binary."
license = "MIT"
repository = "https://github.com/paperfoot/stylometry-cli"
readme = "README.md"
keywords = ["stylometry", "authorship", "forensics", "nlp", "cli"]
categories = ["command-line-utilities", "text-processing"]
# The eval corpora/profile fixtures (tens of MiB) and internal dirs are for
# development and the eval suite only -- they don't belong in the published
# crate. Keep the package to source + docs.
exclude = ["eval/", ".ritalin/", ".claude/", ".github/"]

[[bin]]
name = "stylometry"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6"
unicode-segmentation = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
